--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,4 +67,8 @@
       @apply bg-background text-foreground;
     }
   }
-  
+
+* {
+    scrollbar-width: none;
+    scrollbar-color: #888 #fff;
+}
